--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -172,8 +172,8 @@
    "source": [
     "x = [23, 10, 12, 21, 4, 8, 19, 15, 11, 9]\n",
     "df1 = pd.DataFrame({'x':x})\n",
-    "dr1 = ApodeData(df1, income_column=\"x\") \n",
-    "dr1"
+    "ad1 = ApodeData(df1, income_column=\"x\") \n",
+    "ad1"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "max     190.596705"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,8 +275,8 @@
     "\n",
     "n = 1000 # observations\n",
     "seed = 12345\n",
-    "dr2 = datasets.make_weibull(seed=seed,size=n)\n",
-    "dr2.describe()"
+    "ad2 = datasets.make_weibull(seed=seed,size=n)\n",
+    "ad2.describe()"
    ]
   },
   {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
     }
    ],
    "source": [
-    "dr2.plot();"
+    "ad2.plot();"
    ]
   },
   {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "0.626"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,13 +347,13 @@
    "source": [
     "# Absolute poverty\n",
     "pline = 50 # Poverty line\n",
-    "p = dr2.poverty('headcount',pline=pline)\n",
+    "p = ad2.poverty('headcount',pline=pline)\n",
     "p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "(0.214, 0.214, 0.214, 0.256)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +370,16 @@
    "source": [
     "# Relative poverty\n",
     "# pline = factor*stat  [stat: mean, median, quantile_q]\n",
-    "p1 = dr2.poverty('headcount')  # pline= 0.5*median(y)\n",
-    "p2 = dr2.poverty('headcount', pline='median', factor=0.5)\n",
-    "p3 = dr2.poverty('headcount', pline='quantile', q=0.5, factor=0.5)\n",
-    "p4 = dr2.poverty('headcount', pline='mean', factor=0.5)\n",
+    "p1 = ad2.poverty('headcount')  # pline= 0.5*median(y)\n",
+    "p2 = ad2.poverty('headcount', pline='median', factor=0.5)\n",
+    "p3 = ad2.poverty('headcount', pline='quantile', q=0.5, factor=0.5)\n",
+    "p4 = ad2.poverty('headcount', pline='mean', factor=0.5)\n",
     "p1, p2, p3, p4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
        "15  chakravarty    0.5  0.189260"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,9 +555,9 @@
     "p = []\n",
     "for elem in pov_list:\n",
     "    if elem[1]==None:\n",
-    "        p.append(dr2.poverty(elem[0],pline=pline))\n",
+    "        p.append(ad2.poverty(elem[0],pline=pline))\n",
     "    else:\n",
-    "        p.append(dr2.poverty(elem[0],pline=pline,alpha=elem[1]))\n",
+    "        p.append(ad2.poverty(elem[0],pline=pline,alpha=elem[1]))\n",
     "        df_p = pd.concat([pd.DataFrame(pov_list),pd.DataFrame(p)],axis=1)\n",
     "df_p.columns = ['method','alpha','measure']\n",
     "df_p   "
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
    ],
    "source": [
     "# TIP curve\n",
-    "dr2.plot(\"tip\",pline=pline);"
+    "ad2.plot(\"tip\",pline=pline);"
    ]
   },
   {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -620,20 +620,20 @@
        "0.3652184907296814"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluate an inequality method\n",
-    "q = dr2.inequality('gini')\n",
+    "q = ad2.inequality('gini')\n",
     "q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
        "16    atkinson   2.00   0.631276"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,9 +817,9 @@
     "p = []\n",
     "for elem in ineq_list:\n",
     "    if elem[1]==None:\n",
-    "        p.append(dr2.inequality(elem[0]))\n",
+    "        p.append(ad2.inequality(elem[0]))\n",
     "    else:\n",
-    "        p.append(dr2.inequality(elem[0],alpha=elem[1]))\n",
+    "        p.append(ad2.inequality(elem[0],alpha=elem[1]))\n",
     "\n",
     "df_i = pd.concat([pd.DataFrame(ineq_list),pd.DataFrame(p)],axis=1)\n",
     "df_i.columns = ['method','alpha','measure']\n",
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -855,12 +855,12 @@
    ],
    "source": [
     "# Lorenz Curves\n",
-    "dr2.plot.lorenz();"
+    "ad2.plot.lorenz();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -878,12 +878,12 @@
    ],
    "source": [
     "# Generalized Lorenz Curve\n",
-    "dr2.plot.lorenz(alpha='g');"
+    "ad2.plot.lorenz(alpha='g');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -901,12 +901,12 @@
    ],
    "source": [
     "# Absolute Lorenz Curve\n",
-    "dr2.plot.lorenz(alpha='a');"
+    "ad2.plot.lorenz(alpha='a');"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,7 @@
    ],
    "source": [
     "# Pen's Parade\n",
-    "dr2.plot('pen',pline=60);"
+    "ad2.plot('pen',pline=60);"
    ]
   },
   {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
        "ApodeData(income_column='y2', [5 x 1])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "(0.30399999999999994, 0.25440000000000007)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1099,20 +1099,20 @@
        "28.824397753868958"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluate a welfare method\n",
-    "w = dr2.welfare('sen')\n",
+    "w = ad2.welfare('sen')\n",
     "w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
        "8   isoelastic    inf   0.112876"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,9 +1232,9 @@
     "p = []\n",
     "for elem in wlf_list:\n",
     "    if elem[1]==None:\n",
-    "        p.append(dr2.welfare(elem[0]))\n",
+    "        p.append(ad2.welfare(elem[0]))\n",
     "    else:\n",
-    "        p.append(dr2.welfare(elem[0],alpha=elem[1]))\n",
+    "        p.append(ad2.welfare(elem[0],alpha=elem[1]))\n",
     "\n",
     "df_w = pd.concat([pd.DataFrame(wlf_list),pd.DataFrame(p)],axis=1)\n",
     "df_w.columns = ['method','alpha','measure']\n",
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1261,20 +1261,20 @@
        "0.03316795744715791"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluate a polarization method\n",
-    "p = dr2.polarization('ray')\n",
+    "p = ad2.polarization('ray')\n",
     "p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
        "1  wolfson  None  0.357081"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,9 +1338,9 @@
     "p = []\n",
     "for elem in pol_list:\n",
     "    if elem[1]==None:\n",
-    "        p.append(dr2.polarization(elem[0]))\n",
+    "        p.append(ad2.polarization(elem[0]))\n",
     "    else:\n",
-    "        p.append(dr2.polarization(elem[0],alpha=elem[1]))\n",
+    "        p.append(ad2.polarization(elem[0],alpha=elem[1]))\n",
     "df_pz = pd.concat([pd.DataFrame(pol_list),pd.DataFrame(p)],axis=1)\n",
     "df_pz.columns = ['method','alpha','measure']\n",
     "df_pz "
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1366,20 +1366,20 @@
        "0.00044254144331556705"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluate a concentration method\n",
-    "c = dr2.concentration('herfindahl')\n",
+    "c = ad2.concentration('herfindahl')\n",
     "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
        "4  concentration_ratio     5  0.017352"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,14 +1467,14 @@
     "p = []\n",
     "for elem in conc_list:\n",
     "    if elem[1]==None:\n",
-    "        p.append(dr2.concentration(elem[0]))\n",
+    "        p.append(ad2.concentration(elem[0]))\n",
     "    else:\n",
     "        if elem[0]==\"herfindahl\":\n",
-    "            p.append(dr2.concentration(elem[0],normalized=elem[1]))  # check keyword\n",
+    "            p.append(ad2.concentration(elem[0],normalized=elem[1]))  # check keyword\n",
     "        elif elem[0]==\"concentration_ratio\":\n",
-    "            p.append(dr2.concentration(elem[0],k=elem[1]))  # check keyword            \n",
+    "            p.append(ad2.concentration(elem[0],k=elem[1]))  # check keyword            \n",
     "        else:\n",
-    "            p.append(dr2.concentration(elem[0],alpha=elem[1]))\n",
+    "            p.append(ad2.concentration(elem[0],alpha=elem[1]))\n",
     "\n",
     "df_c = pd.concat([pd.DataFrame(conc_list),pd.DataFrame(p)],axis=1)\n",
     "df_c.columns = ['method','alpha','measure']\n",
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
        "9   7  10  10"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1626,7 @@
        "0.5"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,14 +1634,14 @@
    "source": [
     "# simple calculation\n",
     "pline = 11\n",
-    "dra1 = ApodeData(dfa,income_column='x') \n",
-    "p1 = dra1.poverty('headcount',pline=pline)\n",
+    "ada1 = ApodeData(dfa,income_column='x') \n",
+    "p1 = ada1.poverty('headcount',pline=pline)\n",
     "p1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,8 +1656,8 @@
     "    for name, group in grouped:\n",
     "        y = group[income_column].values\n",
     "        count = group.shape[0]\n",
-    "        dri = ApodeData({income_column:y},income_column=income_column)\n",
-    "        p = dri.poverty(method,pline=pline)\n",
+    "        adi = ApodeData({income_column:y},income_column=income_column)\n",
+    "        p = adi.poverty(method,pline=pline)\n",
     "        a.append(name)\n",
     "        b.append(p)\n",
     "        c.append(count)\n",
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
        "20   0.250000         4"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1739,7 +1739,7 @@
        "0.5"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
