fixed link to pdf that for some strange reason breaks the docs

--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -1762,13 +1762,23 @@
    "source": [
     "## References\n",
     "\n",
-    "* Cowell, F. (2011) Measuring Inequality. London School of Economics Perspectives in Economic Analysis. 3rd ed. Edición. Oxford University Press\n",
-    "http://darp.lse.ac.uk/papersDB/Cowell_measuringinequality3.pdf\n",
-    "* Cowell, F. (2016) “Inequality and Poverty Measures”, in Oxford Handbook of Well-Being And Public Policy, edited by Matthew D. Adler and Marc Fleurbaey \n",
-    "* Haughton, J. and S. Khandker (2009). Handbook on Poverty + Inequality. World Bank Training Series. https://openknowledge.worldbank.org/bitstream/handle/10986/11985/9780821376133.pdf\n",
-    "* POBREZA Y DESIGUALDAD EN AMÉRICA LATINA. https://www.cedlas.econo.unlp.edu.ar/wp/wp-content/uploads/Pobreza_desigualdad_-America_Latina.pdf\n",
-    "* Araar Abdelkrim and Jean-Yves Duclos (2007). \"DASP: Distributive Analysis  Stata Package\", PEP, World Bank, UNDP and Université Laval. http://dasp.ecn.ulaval.ca/"
+    "> Schröder, C. (2011). Cowell, F.: Measuring Inequality. London School of Economics Perspectives in Economic Analysis.\n",
+    "\n",
+    "> Adler, M. D., & Fleurbaey, M. (Eds.). (2016). The Oxford handbook of well-being and public policy. Oxford University Press.\n",
+    "\n",
+    "> Haughton, J., & Khandker, S. R. (2009). Handbook on poverty+ inequality. World Bank Publications.\n",
+    "\n",
+    "> Gasparini, L., Cicowiez, M., & Sosa Escudero, W. (2012). Pobreza y desigualdad en América Latina. Temas Grupo Editorial.\n",
+    "\n",
+    "> Araar, A., & Duclos, J. Y. (2007). DASP: Distributive analysis stata package. PEP, World Bank, UNDP and Université Laval."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
