--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "### Manual data loading\n",
     "\n",
-    "An object can be generated from a DataFrame or from a valid argument in the DataFrame method. The function *binning* can be used to group the data by number of bins.\n"
+    "An object can be generated from a DataFrame or from a valid argument in the DataFrame method."
    ]
   },
   {
@@ -399,15 +399,6 @@
     "pline = 50 # Poverty line\n",
     "p = ad2.poverty('headcount',pline=pline)\n",
     "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# help(PovertyMeasures) # ver"
    ]
   },
   {
@@ -1859,14 +1850,6 @@
    "source": [
     "df_conc = concentration_summary(ad2)\n",
     "df_conc "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### example\n",
-    "Four concentration measures commonly used to analyze industrial concentration are implemented."
    ]
   },
   {
