--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -800,13 +800,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class=\"apode-data-container\" id=2098203637552><div>\n",
+       "<div class=\"apode-data-container\" id=2098203040640><div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -825,7 +825,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>x</th>\n",
-       "      <th>y</th>\n",
+       "      <th>region</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -884,7 +884,7 @@
        "</div>ApodeData(income_column='<i>x</i>') - 10 rows x             2 columns</div>"
       ],
       "text/plain": [
-       "    x      y\n",
+       "    x region\n",
        "0  23  urban\n",
        "1  10  urban\n",
        "2  12  rural\n",
@@ -898,7 +898,7 @@
        "ApodeData(income_column='x') - 10 rows x             2 columns"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,15 +906,15 @@
    "source": [
     "x = [23, 10, 12, 21, 4, 8, 19, 15, 5, 7]\n",
     "y = [10,10,20,10,10,20,20,20,10,10] \n",
-    "y = ['urban','urban','rural','urban','urban','rural','rural','rural','urban','urban'] \n",
-    "dfa = pd.DataFrame({'x':x,'y':y})\n",
+    "region = ['urban','urban','rural','urban','urban','rural','rural','rural','urban','urban'] \n",
+    "dfa = pd.DataFrame({'x':x,'region':region})\n",
     "ada1 = ApodeData(dfa,income_column='x') \n",
     "ada1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
        "urban   0.666667         6"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,13 +971,13 @@
    "source": [
     "# group calculation according to variable \"y\"\n",
     "pline = 11\n",
-    "pg = poverty_bygroup(ada1,'headcount',group_column='y', pline=pline)\n",
+    "pg = poverty_groupby(ada1,'headcount',group_column='region', pline=pline)\n",
     "pg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "0.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "0.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,15 +2022,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# receives a dataframe and applies a measure according to the column \"varg\"\n",
-    "def poverty_bygroup(ad,method,group_column,**kwargs):\n",
-    "    return measure_bygroup(ad,method,group_column,measure='poverty',**kwargs)\n",
+    "def poverty_groupby(ad,method,group_column,**kwargs):\n",
+    "    return measure_groupby(ad,method,group_column,measure='poverty',**kwargs)\n",
     "\n",
-    "def measure_bygroup(ad,method,group_column,measure,**kwargs):\n",
+    "def measure_groupby(ad,method,group_column,measure,**kwargs):\n",
     "    a = []; b = []; c = []\n",
     "    for name, group in ad.groupby(group_column):\n",
     "        adi = ApodeData(group,income_column=ad.income_column)\n",
