--- a/docs/source/Tutorial.ipynb
+++ b/docs/source/Tutorial.ipynb
@@ -40,7 +40,7 @@
     "    ad.plot.lorenz(**kwargs)\n",
     "    ad.plot.pen(**kwargs)\n",
     "    \n",
-    "    "
+    "For an introduction to the Python language see [Beginner Guide](https://wiki.python.org/moin/BeginnersGuide)."
    ]
   },
   {
